--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,8 +9,8 @@
 
 <ul>
   <% @products.each do |product| %>
-    <li><%= product.title %></li>
-    <!-- <li><%= link_to product.title, "https://#{@shop_session.url}/admin/products/#{product.id}", target: "_top" %></li> -->
+    <!-- <li><%= product.title %></li> -->
+    <li><%= link_to product.title, "https://#{@shop_session.url}/admin/products/#{product.id}", target: "_top" %></li>
   <% end %>
 </ul>
 
